@@ -1,4 +1,9 @@
+
+pl 25
+	- merge sstack and Array
+pl 24
+	- small fix in vector print
 pl 23
 	- win32 patches (JN)
-pl 22:
+pl 22
 	- Array::add -> Array::push
